# social-network-prototype

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.docker-compose.yml  prod.docker-compose.yml  pyproject.toml
.github/workflows/: check.yml
app/: __main__.py  deps.py
app/api/: __init__.py  auth.py  ping.py  post.py
app/config/: __init__.py  settings.py
app/db/: alembic.ini
app/db/migrations/: env.py
app/db/migrations/versions/: 2edc78989422_.py
app/db/postgres/: __init__.py  connection.py  models.py
app/db/redis/: connection.py  models.py
app/dto/: __init__.py  exceptions.py  post.py  token.py  user.py
app/usecase/: __init__.py  crud.py  post.py  security.py  token.py  user.py
tests/: conftest.py  database.py  overrides.py  utils.py
tests/api/: test_auth.py  test_ping.py
