[tool.poetry]
name = "social-network-mvp"
version = "0.1.0"
description = ""
authors = ["Vadim Yakshigulov <toadharvard@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.89.0" }
sqlalchemy = "^1.4.46"
alembic = "^1.9.1"
pydantic = { extras = ["dotenv"], version = "^1.10.4" }
psycopg2-binary = "^2.9.5"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
sqlalchemy-utils = "^0.39.0"
pydantic-factories = "^1.17.0"
httpx = "^0.23.3"
redis = "^4.4.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
types-python-jose = "^3.3.4.1"
types-passlib = "^1.7.7.3"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
types-redis = "^4.4.0.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore:'crypt' is deprecated:DeprecationWarning"]
